k8s/backup/ingress_https_qket.yaml
############################
# ingress_https_qket.yaml  #
############################

# ket-prod
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-alb-ingress
  namespace: qket-prod
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:727646470302:certificate/a9789e71-7453-43d9-b0db-ad2ac973f4c0 # ACM 인증서 ARN

    # 80으로 받은 포트 443으로 리다이렉션
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'

    # AWS 콘솔 보안그룹 > 직접 수동으로 인바운드 규칙 설정 하거나 아랫쪽 코드 사용
    # prod 는 모든 사용IP inbound 허용
    #alb.ingress.kubernetes.io/inbound-cidrs: "0.0.0.0/0"

spec:
  ingressClassName: alb
  rules:
    - host: app.jun979.click
      http:
        paths:
          # 주석 이유 - alb -> frontend(next.js) -> backend(spring boot) 로 가기때문에
          # backend service 불필요
          #
          # - path: /
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: qket-backend-service
          #       port:
          #         number: 80

          - path: /
            pathType: Prefix
            backend:
              service:
                name: qket-frontend-service
                port:
                  number: 80

---
# qket-dev
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-alb-ingress
  namespace: qket-dev
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:727646470302:certificate/a9789e71-7453-43d9-b0db-ad2ac973f4c0 # ACM 인증서 ARN

    # 80으로 받은 포트 443으로 리다이렉션
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'

    # AWS 콘솔 보안그룹 > 직접 수동으로 인바운드 규칙 설정 하거나 아랫쪽 코드 사용
    # DEV 허용할 IP로 변경 (본인 IP/32)
    # alb.ingress.kubernetes.io/inbound-cidrs: "내IP/32"

spec:
  ingressClassName: alb
  rules:
    - host: dev.jun979.click ## dev 쪽 Router53 추가 필요
      http:
        paths:
          # 주석 이유 - alb -> frontend(next.js) -> backend(spring boot) 로 가기때문에
          # backend service 불필요
          #
          # - path: /
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: qket-backend-service
          #       port:
          #         number: 80

          - path: /
            pathType: Prefix
            backend:
              service:
                name: qket-frontend-service
                port:
                  number: 80
