k8s/backup/networkpolicy_qKet.yaml
# qket-dev
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-allow-same-namespace
  namespace: qket-dev
spec:
  podSelector:
    matchLabels:
      app: qket-backend # Deployment의 template.metadata.label 값
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: qket-dev # 지정한 namespace 안에서만 트래픽 허용
      ports:
        - port: 8080
